[build-system]
requires = ["flit_core >=3.10.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xncml"
authors = [
  {name = "Anderson Banihirwe", email = "abanihi@ucar.edu"}
]
maintainers = [
  {name = "Anderson Banihirwe", email = "abanihi@ucar.edu"},
  {name = "Abel Aoun", email = "aoun.abel@gmail.com"},
  {name = "David Huard", email = "david.huard@gmail.com"},
  {name = "Trevor James Smith", email = "trevor_smith@live.com"}
]
description = "Tools for manipulating and opening NCML (NetCDF Markup) files with/for xarray"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["xncml", "xarray", "netcdf", "ncml"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]
dependencies = [
  "cftime",
  "dask",
  "netCDF4",
  "psutil",
  "xarray",
  "xmltodict",
  "xsdata"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "bump-my-version >=0.30.1",
  "coverage >=7.5.0",
  "flake8 >=7.1.1",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.10.1,<4.0",
  "mypy >=1.14.1",
  "numpydoc >=1.8.0",
  "pip >=25.0",
  "pre-commit >=3.5.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "ruff >=0.9.0",
  "tox >=4.24.1",
  "watchdog >=4.0.0"
]
docs = [
  # Documentation and examples
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx >=0.9.5",
  "sphinx >=7.0.0",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton",
  "sphinx-rtd-theme >=1.0"
]
all = ["xncml[dev]", "xncml[docs]"]

[project.urls]
"Changelog" = "https://xncml.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/xarray-contrib/xncml/issues"
"Source" = "https://github.com/xarray-contrib/xncml"

[tool.bumpversion]
current_version = "0.5.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/xarray-contrib/xncml>`_ (latest)
----------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/xarray-contrib/xncml>`_ (latest)
    ----------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/xarray-contrib/xncml/tree/{new_version}>`_ ({now:%Y-%m-%d})
---------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "src/xncml/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xncml.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
skip = "tests"
ignore-words-list = "astroid,degreee,nd,socio-economic"

[tool.coverage.paths]
source = ["src/xncml/", "*/site-packages/xncml/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["xncml"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xncml",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xncml*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = 3.10
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"

[tool.ruff]
src = ["xncml"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # The following ignore codes are disabled because the codebase is not yet compliant
  "BLE001", # Do not catch blind exception: `Exception`
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PTH100", # `os.path.abspath()` should be replaced by `Path.resolve()`
  "PTH107", # `os.remove()` should be replaced by `Path.unlink()`
  "PTH110", # ``os.path.exists()` should be replaced by `Path.exists()`
  "PTH120", # `os.path.dirname()` should be replaced by `Path.parent`
  "PTH123", # `open()` should be replaced by `Path.open()`
  "RUF013", # PEP 484 prohibits implicit `Optional`
  "S110", # `try`-`except`-`pass` detected, consider logging the exception
  "UP006", # Use `list` instead of `List` for type annotation
  "UP007" # Use `X | Y` for type annotations
]
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xncml/**/__init__.py" = ["F401", "F403"]
"src/xncml/generated/*.py" = ["D", "UP"]
"src/xncml/parser.py" = ["C901"] # To be added
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/xncml", "tests"]
sort_by_size = true
