[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
lint = [
  # Linting tools
  "codespell >=2.4.2",
  "deptry >=0.25.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "mypy >=1.20.0",
  "numpydoc >=1.10.0",
  "pylint >=4.0.4",
  "ruff >=0.15.9",
  "vulture >=2.14",
  "yamllint >=1.38.0"
]
test = [
  # Base testing support
  "coverage[toml] >=7.13.4",
  "pytest >=9.0.2",
  "pytest-cov >=7.0.0"
]
docs = [
  # Documentation and example support
  "ipykernel",
  "ipython >=8.10.0",
  "jupyter_client",
  "nbsphinx >=0.9.8",
  "sphinx >=8.2.0",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton >=0.5.2",
  "sphinx-rtd-theme >=1.0"
]
tox = [
  "tox >=4.52.0",
  "tox-gh >=1.7.1"
]
dev = [
  # Development and testing tools
  "bump-my-version >=1.3.0",
  "pip >=26.0.1",
  "prek >=0.3.0",
  "watchdog >=6.0.0",
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "tox"}
]

[project]
name = "xncml"
authors = [
  {name = "Anderson Banihirwe", email = "abanihi@ucar.edu"},
  {name = "David Huard", email = "david.huard@gmail.com"}
]
maintainers = [
  {name = "Abel Aoun", email = "aoun.abel@gmail.com"},
  {name = "David Huard", email = "david.huard@gmail.com"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
description = "Tools for manipulating and opening NCML (NetCDF Markup) files with/for xarray"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["xncml", "xarray", "netcdf", "ncml"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Typing :: Typed"
]
dynamic = ["version"]
dependencies = [
  "cftime",
  "dask",
  "netCDF4",
  "numpy",
  "psutil",
  "xarray",
  "xmltodict",
  "xsdata"
]

[project.optional-dependencies]
extras = []

[project.urls]
"Homepage" = "https://xncml.readthedocs.io/"
"Changelog" = "https://xncml.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/xarray-contrib/xncml/issues"
"Source" = "https://github.com/xarray-contrib/xncml"

[tool.bumpversion]
current_version = "0.5.1"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/xarray-contrib/xncml/tree/master>`_ (latest)
----------------------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/xarray-contrib/xncml/tree/master>`_ (latest)
    ----------------------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/xarray-contrib/xncml/tree/v{new_version}>`_ ({now:%Y-%m-%d})
----------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/xncml/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
skip = "tests"
ignore-words-list = "astroid,degreee,nd,socio-economic,thirdparty"

[tool.coverage.paths]
source = ["src/xncml/", "*/site-packages/xncml/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["xncml"]

[tool.deptry.per_rule_ignores]
DEP002 = ["cftime", "dask", "netCDF4", "psutil"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xncml",
  "tests/*.py",
  "tox.toml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xncml*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]

[tool.ruff]
src = ["xncml"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # The following ignore codes are disabled because the codebase is not yet compliant
  "BLE001", # Do not catch blind exception: `Exception`
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PTH100", # `os.path.abspath()` should be replaced by `Path.resolve()`
  "PTH107", # `os.remove()` should be replaced by `Path.unlink()`
  "PTH110", # ``os.path.exists()` should be replaced by `Path.exists()`
  "PTH120", # `os.path.dirname()` should be replaced by `Path.parent`
  "PTH123", # `open()` should be replaced by `Path.open()`
  "RUF013", # PEP 484 prohibits implicit `Optional`
  "S110", # `try`-`except`-`pass` detected, consider logging the exception
  "UP006", # Use `list` instead of `List` for type annotation
  "UP007" # Use `X | Y` for type annotations
]
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xncml"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xncml/**/__init__.py" = ["F401", "F403"]
"src/xncml/generated/*.py" = ["D", "UP"]
"src/xncml/parser.py" = ["C901"] # To be added
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/xncml", "tests"]
sort_by_size = true
